upload file - change password

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -29,13 +29,16 @@
     "@nestjs/platform-express": "^11.0.14",
     "@nestjs/swagger": "^11.1.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.6.0",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
+    "streamifier": "^0.1.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.22",
     "typeorm-transactional-cls-hooked": "^0.1.21"
