--- a/back-end/package.json
+++ b/back-end/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.6.0",
