--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.14",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.14",
@@ -30,6 +31,7 @@
     "@nestjs/swagger": "^11.1.1",
     "@nestjs/typeorm": "^11.0.0",
     "@types/multer": "^1.4.12",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "class-transformer": "^0.5.1",
@@ -39,6 +41,7 @@
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "streamifier": "^0.1.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.22",
